docs: don't hide navigation drawer scrollbar to avoid layout shifts

--- a/apps/docs/src/app/layouts/default/default.component.scss
+++ b/apps/docs/src/app/layouts/default/default.component.scss
@@ -26,6 +26,12 @@
       height: calc(100vh - var(--anglify-toolbar-regular-height));
       align-self: flex-start;
     }
+
+    ::ng-deep {
+      .anglify-navigation-drawer-content {
+        overflow-y: scroll;
+      }
+    }
   }
 
   anglify-toolbar {
